; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_showjournal.c_read_content.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_showjournal.c_read_content.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@db = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"I/O error reading %d bytes from %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [45 x i8] c"Short read: got only %d of %d bytes from %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, i32)* @read_content to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @read_content(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i8* @malloc(i32 %7)
  store i8* %8, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = icmp eq i8* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = call i32 (...) @out_of_memory()
  br label %13

13:                                               ; preds = %11, %2
  %14 = load i32, i32* @db, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* @SEEK_SET, align 4
  %17 = call i32 @fseek(i32 %14, i32 %15, i32 %16)
  %18 = load i8*, i8** %6, align 8
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* @db, align 4
  %21 = call i64 @fread(i8* %18, i32 1, i32 %19, i32 %20)
  %22 = trunc i64 %21 to i32
  store i32 %22, i32* %5, align 4
  %23 = load i32, i32* %5, align 4
  %24 = icmp slt i32 %23, 0
  br i1 %24, label %25, label %33

25:                                               ; preds = %13
  %26 = load i32, i32* @stderr, align 4
  %27 = load i32, i32* %3, align 4
  %28 = load i32, i32* %4, align 4
  %29 = call i32 (i32, i8*, i32, i32, ...) @fprintf(i32 %26, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 %27, i32 %28)
  %30 = load i8*, i8** %6, align 8
  %31 = load i32, i32* %3, align 4
  %32 = call i32 @memset(i8* %30, i32 0, i32 %31)
  br label %52

33:                                               ; preds = %13
  %34 = load i32, i32* %5, align 4
  %35 = load i32, i32* %3, align 4
  %36 = icmp slt i32 %34, %35
  br i1 %36, label %37, label %51

37:                                               ; preds = %33
  %38 = load i32, i32* @stderr, align 4
  %39 = load i32, i32* %5, align 4
  %40 = load i32, i32* %3, align 4
  %41 = load i32, i32* %4, align 4
  %42 = call i32 (i32, i8*, i32, i32, ...) @fprintf(i32 %38, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.1, i64 0, i64 0), i32 %39, i32 %40, i32 %41)
  %43 = load i8*, i8** %6, align 8
  %44 = load i32, i32* %5, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i8, i8* %43, i64 %45
  %47 = load i32, i32* %3, align 4
  %48 = load i32, i32* %5, align 4
  %49 = sub nsw i32 %47, %48
  %50 = call i32 @memset(i8* %46, i32 0, i32 %49)
  br label %51

51:                                               ; preds = %37, %33
  br label %52

52:                                               ; preds = %51, %25
  %53 = load i8*, i8** %6, align 8
  ret i8* %53
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @out_of_memory(...) #1

declare dso_local i32 @fseek(i32, i32, i32) #1

declare dso_local i64 @fread(i8*, i32, i32, i32) #1

declare dso_local i32 @fprintf(i32, i8*, i32, i32, ...) #1

declare dso_local i32 @memset(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
